<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView
		android:id="@+id/textView1"
		android:layout_height="wrap_content"
		android:text="@string/LoginPassword_LoginTitle"
		android:layout_width="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
	<EditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/editText1">
		<requestFocus></requestFocus>
	</EditText>
	<TextView
		android:id="@+id/textView2"
		android:layout_height="wrap_content"
		android:text="@string/LoginPassword_PasswordTitle"
		android:layout_width="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
	<EditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/editText2"
		android:inputType="textPassword"></EditText>
	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:gravity="center"
		android:id="@+id/LoginButton"
		android:onClick="onClickLogin"
		android:text="@string/LoginPassword_LoginButton"></Button>

</LinearLayout>
