<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/panel_background"
    android:orientation="vertical"
    android:weightSum="1" >

    <ListView
        android:id="@+id/playListView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="top"
        android:layout_weight="1.0"
        android:divider="@drawable/track_list_diveder"
        android:dividerHeight="1dp"
        android:fadingEdge="none" >
    </ListView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="@drawable/playlist_divider_background" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/track_progressid"
            style="@style/TrackDurationStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:text="--:--"
            android:layout_weight="1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/track_durationid"
            style="@style/TrackDurationStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="--:--"
            android:layout_weight="1"
            android:visibility="visible" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/playingSeek"
        style="@style/ProgressSeekBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/leftbuttonstates"
            android:contentDescription="@string/rewindButtonText"
            android:onClick="onClickRewind"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/rewind" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:background="@drawable/playbutton_stopped_states"
            android:contentDescription="@string/playButtonText"
            android:onClick="onClickPlayPause"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/play" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:background="@drawable/rightbuttonstates"
            android:contentDescription="@string/forwardButtonText"
            android:onClick="onClickForward"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/forward" />
    </LinearLayout>

</LinearLayout>